--- a/remote/package.json
+++ b/remote/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "webpack-cli serve",
     "build": "webpack build --config webpack.config.js --stats-children",
-    "serve": "webpack serve --config webpack.config.js --port 3002",
+    "serve": "webpack serve --config webpack.config.js --port 3001",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4"
   }
 }
